--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,17 @@
-<app-alunos></app-alunos>
-<br>
-<app-professores></app-professores>
+<nav>
+    <ul>
+        <li>
+            <a routerLink="alunos">Alunos</a>
+        </li>
+        <li>
+            <a routerLink="professores">Professores</a>
+        </li>
+        <li>
+            <a routerLink="perfil">Perfil</a>
+        </li>
+        <li>
+            <a routerLink="dashboard">Dashboard</a>
+        </li>
+    </ul>
+</nav>
+<router-outlet></router-outlet>
