--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,4 @@
-<nav>
-    <ul>
-        <li>
-            <a routerLink="alunos">Alunos</a>
-        </li>
-        <li>
-            <a routerLink="professores">Professores</a>
-        </li>
-        <li>
-            <a routerLink="perfil">Perfil</a>
-        </li>
-        <li>
-            <a routerLink="dashboard">Dashboard</a>
-        </li>
-    </ul>
-</nav>
-<router-outlet></router-outlet>
+<app-nav></app-nav>
+<div class="container">
+    <router-outlet></router-outlet>
+</div>
