--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,29 +1,32 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container">
     <a class="navbar-brand" routerLink="dashboard">SmartSchool</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+      aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
-      <ul class="navbar-nav">
+      <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <a class="nav-link" routerLink="alunos" routerLinkActive="active">Alunos <span class="sr-only">(current)</span></a>
+          <a class="nav-link" routerLink="alunos" routerLinkActive="active">Alunos <span
+              class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" routerLink="professores" routerLinkActive="active">Professores</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="perfil" routerLinkActive="active">Perfil</a>
-        </li>
+      </ul>
+      <ul class="navbar-nav" dropdown>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Dropdown link
+          <a id="button-basic" dropdownToggle class="nav-link dropdownToggle" role="button" data-toggle="dropdown" id="navbarDropdownMenuLink"
+            aria-haspopup="true" aria-expanded="false" style="cursor: pointer">
+            Pedro
           </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Another action</a>
-            <a class="dropdown-item" href="#">Something else here</a>
+          <div id="dropdown-basic" *dropdownMenu class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+            <a class="dropdown-item" routerLink="perfil">Perfil</a>
+            <a class="dropdown-item" href="#">Sair</a>
           </div>
         </li>
       </ul>
     </div>
-  </nav>
+  </div>
+</nav>
