--- a/src/app/professores/professores.component.html
+++ b/src/app/professores/professores.component.html
@@ -1,2 +1,17 @@
 <app-titulo [titulo]="titulo"></app-titulo>
-<p>professores works!</p>
+<table class="table table-hover">
+    <thead>
+      <tr>
+        <th scope="col">#</th>
+        <th scope="col">Nome</th>
+        <th scope="col">Sobrenome</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let professor of professores">
+        <th scope="row">{{professor.id}}</th>
+        <td>{{professor.nome}}</td>
+        <td>{{professor.sobrenome}}</td>
+      </tr>
+    </tbody>
+  </table>
