criando o form do bootstrap

--- a/src/app/alunos/alunos.component.html
+++ b/src/app/alunos/alunos.component.html
@@ -1,6 +1,32 @@
 <div *ngIf="AlunoSelecionado">
-    <app-titulo [titulo]="'Aluno: ' + AlunoSelecionado"></app-titulo>
-    <button class="btn default" (click)="DeselecionarAluno()">Voltar</button>
+    <div class="row">
+        <div class="mr-auto">
+            <app-titulo [titulo]="'Aluno: ' + AlunoSelecionado"></app-titulo>
+            <form>
+                <div class="form-group">
+                  <label for="idInput">id</label>
+                  <input type="text" class="form-control" id="idInput">
+                </div>
+                <div class="form-group">
+                    <label for="nomeInput">Nome</label>
+                    <input type="text" class="form-control" id="nomeInput">
+                  </div>
+                  <div class="form-group">
+                    <label for="sobrenomeInput">Sobrenome</label>
+                    <input type="text" class="form-control" id="sobrenomeInput">
+                  </div>
+                <div class="row">
+                    <div class="mr-auto">
+                        <button type="submit" class="btn btn-primary">Submit</button>
+                    </div>
+                    <div>
+                        <button class="btn btn-warning" (click)="DeselecionarAluno()">Voltar</button>
+                    </div>
+                </div>
+              </form>
+        </div>
+    </div>
+
 </div>
 <div *ngIf="!AlunoSelecionado">
     <app-titulo [titulo]="titulo"></app-titulo>
