--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -17,7 +17,7 @@
       </ul>
       <ul class="navbar-nav" dropdown>
         <li class="nav-item dropdown">
-          <a id="button-basic" dropdownToggle class="nav-link dropdownToggle" role="button" data-toggle="dropdown" id="navbarDropdownMenuLink"
+          <a id="button-basic" dropdownToggle class="nav-link dropdown-toggle" role="button" data-toggle="dropdown" id="navbarDropdownMenuLink"
             aria-haspopup="true" aria-expanded="false" style="cursor: pointer">
             Pedro
           </a>
