--- a/src/app/alunos/alunos.component.html
+++ b/src/app/alunos/alunos.component.html
@@ -1,29 +1,29 @@
 <div class="row">
   <div *ngIf="AlunoSelecionado">
     <div>
-        <app-titulo [titulo]="'Aluno: ' + AlunoSelecionado.nome"></app-titulo>
-        <form>
+        <app-titulo [titulo]="'Aluno codigo: ' + AlunoSelecionado.id"></app-titulo>
+        <form [formGroup]="alunoForm" (submit)="alunoSubmit()">
           <div class="form-group">
-            <label for="idInput">id</label>
-            <input type="text" class="form-control" id="idInput" value="{{AlunoSelecionado.id}}">
+            <label for="idInput">Nome</label>
+            <input type="text" class="form-control" id="idInput" formControlName="nome">
           </div>
           <div class="form-group">
-            <label for="nomeInput">Nome</label>
-            <input type="text" class="form-control" id="nomeInput" value="{{AlunoSelecionado.nome}}">
+            <label for="nomeInput">Sobrenome</label>
+            <input type="text" class="form-control" id="nomeInput" formControlName="sobrenome">
           </div>
           <div class="form-group">
-            <label for="sobrenomeInput">Sobrenome</label>
-            <input type="text" class="form-control" id="sobrenomeInput" value="{{AlunoSelecionado.sobrenome}}">
+            <label for="sobrenomeInput">Telefone</label>
+            <input type="text" class="form-control" id="sobrenomeInput" formControlName="telefone">
           </div>
-          <div class="row">
-              <button type="submit" class="btn btn-primary mr-auto">Submit</button>
+          <div class="row mr-auto">
+              <button type="submit" class="btn btn-success mr-auto">Submit</button>
             <div>
               <button class="btn btn-outline-danger mr-auto" (click)="DeselecionarAluno()">Fechar</button>
             </div>
           </div>
         </form>
     </div>
-    
+
   </div>
   <div [ngClass]="{'col-sm-6' : AlunoSelecionado, 'col-sm-12': !AlunoSelecionado}">
     <app-titulo [titulo]="titulo"></app-titulo>
