--- a/src/app/alunos/alunos.component.html
+++ b/src/app/alunos/alunos.component.html
@@ -1,27 +1,27 @@
 <div class="row">
   <div *ngIf="AlunoSelecionado">
     <div>
-        <app-titulo [titulo]="'Aluno codigo: ' + AlunoSelecionado.id"></app-titulo>
-        <form [formGroup]="alunoForm" (submit)="alunoSubmit()">
-          <div class="form-group">
-            <label for="idInput">Nome</label>
-            <input type="text" class="form-control" id="idInput" formControlName="nome">
+      <app-titulo [titulo]="'Aluno codigo: ' + AlunoSelecionado.id"></app-titulo>
+      <form [formGroup]="alunoForm" (submit)="alunoSubmit()">
+        <div class="form-group">
+          <label for="idInput">Nome</label>
+          <input type="text" class="form-control" id="idInput" formControlName="nome">
+        </div>
+        <div class="form-group">
+          <label for="nomeInput">Sobrenome</label>
+          <input type="text" class="form-control" id="nomeInput" formControlName="sobrenome">
+        </div>
+        <div class="form-group">
+          <label for="sobrenomeInput">Telefone</label>
+          <input type="text" class="form-control" id="sobrenomeInput" formControlName="telefone">
+        </div>
+        <div class="row mr-auto">
+          <button type="submit" class="btn btn-success mr-auto">Submit</button>
+          <div>
+            <button class="btn btn-outline-danger mr-auto" (click)="DeselecionarAluno()">Fechar</button>
           </div>
-          <div class="form-group">
-            <label for="nomeInput">Sobrenome</label>
-            <input type="text" class="form-control" id="nomeInput" formControlName="sobrenome">
-          </div>
-          <div class="form-group">
-            <label for="sobrenomeInput">Telefone</label>
-            <input type="text" class="form-control" id="sobrenomeInput" formControlName="telefone">
-          </div>
-          <div class="row mr-auto">
-              <button type="submit" class="btn btn-success mr-auto">Submit</button>
-            <div>
-              <button class="btn btn-outline-danger mr-auto" (click)="DeselecionarAluno()">Fechar</button>
-            </div>
-          </div>
-        </form>
+        </div>
+      </form>
     </div>
 
   </div>
@@ -33,15 +33,34 @@
           <th scope="col">#</th>
           <th scope="col">Nome</th>
           <th scope="col">Sobrenome</th>
+          <th scope="col">Opções</th>
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let aluno of alunos" style="cursor: pointer;" (click)="SelecaoAluno(aluno)">
+        <tr *ngFor="let aluno of alunos" style="cursor: pointer;">
           <th scope="row">{{aluno.id}}</th>
           <td>{{aluno.nome}}</td>
           <td>{{aluno.sobrenome}}</td>
+          <td>
+            <div class="btn-group">
+              <button class="btn btn-sm btn-warning" (click)="SelecaoAluno(aluno)">Detalhe</button>
+              <button class="btn btn-sm btn-primary" (click)="openModal(template)">Professores</button>
+              <button class="btn btn-sm btn-danger">Desativar</button>
+            </div>
+          </td>
         </tr>
       </tbody>
     </table>
   </div>
 </div>
+
+<ng-template #template>
+  <div class="modal-body">
+    <app-professores></app-professores>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn pull-right" aria-label="Close" (click)="modalRef.hide()">
+      Fechar
+    </button>
+  </div>
+</ng-template>
